--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ src/app/tempCodeRunnerFile.py
 src/sql/.DS_Store
 src/sql/tempCodeRunnerFile.py
 modified:   src/app/__pycache__/config.cpython-310.pyc
+src/app/__pycache__/config.cpython-310.pyc
